aws/internetgateway.tf
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "devPart_internet_gateway"
    MN = "devPart"
  }
}
